--- a/src/PositionSummary/PositionSummary.scss
+++ b/src/PositionSummary/PositionSummary.scss
@@ -25,6 +25,22 @@
     &__width {
         min-width: 700px;
     }
+
+    &__items {
+        background-color: lavender;
+        margin: 0 15px 15px 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100px;
+        border-radius: 15px;
+        font-size: 1.5rem;
+    
+        &__text-content {
+          margin: 0 2px;
+        }
+    }
+    
     
 }
 .MuiAccordionSummary-content {
